# EAG-V3

Agentic Arc Code/: Instructions.md  ReadMe.md  action.py  agent.py  artifacts.py  decision.py  mcp_server.py  memory.py  perception.py  pyproject.toml  requirements.txt  schemas.py  usage.json
Agentic Arc Code 10/: README.md
Agentic Arc Code 10/code/: COMPUTER_TASKS.md  agent_config.yaml  flow.py  requirements.txt  skills.py  (+1 more)
Agentic Arc Code 7/: README.md  README_Solution.md  agent7.py  check_faiss.py  decision.py  gateway.py  mcp_server.py  memory.py  perception.py  pyproject.toml  test_mcp_server.py  usage.json
Agentic Arc Code 8/: ReadMe.md  Readme_solution.md  Results.md  agent_config.yaml  flow.py  gateway.py  mcp_server.py  persistence.py  recovery.py  skills.py  usage.json
Agentic Arc Code 9/: ReadMe.md  Solution_ReadMe.md  agent_config.yaml  flow.py  gateway.py  mcp_server.py  recovery.py  skills.py  usage.json
Agentic Arc Code/llm_gatewayV3/: README.md  cache.py  gateway_v3.db  main.py  providers.py  router.py
Agentic Arc Code/llm_gatewayV3/static/: help.html
Agentic Arc Code/llm_gatewayV3/tests/: test_all_providers.py
Agentic Arc Code/sandbox/reminders/: may_15_2026_calendar_reminder.txt  mom_birthday_reminder.txt  mom_birthday_two_weeks_reminder.txt
Agentic Arc Code/state/: memory.json
SQL Query Evaluator/: Instructions.md  Prompt Validator.md  PromptEvaluationResult.md  README.md  app.py  convert_db.py  prompts.py  providers.py  requirements.txt  schemas.py  tools.py
glc_v1_g2_discord-main/: Test_Discord_Results.md  VALIDATION.md
(+222 files in other folders)
